proxmox-ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: proxmox
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/secure-backends: "true"
    kubernetes.io/ingress.class: "nginx-internal"
spec:
  rules:
  - host: proxmox.<path:apps-kv/data/general#internalDN>
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: external-proxmox
            port:
              number: 8006
  tls:
  - hosts:
    - proxmox.<path:apps-kv/data/general#internalDN>
